Fix table overflow

--- a/src/routes/account/components/accountView/index.scss
+++ b/src/routes/account/components/accountView/index.scss
@@ -21,5 +21,7 @@
   &__gov-activity-wrapper,
   &__orders-wrapper {
     overflow-x: auto;
+    overflow-y: auto;
+    max-height: 600px;
   }
 }
